--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -20,7 +20,7 @@ $(document).ready(function() {
     var dataset = {
         {% for shop in price_list %}
         "{{ shop.shop_id }}": {
-            label: '<b>{{ shop.price }}</b> {{ shop.get_currency_display }} <a href="{% url price_prodshop_detail product.id shop.shop_id %}">{{ shop.shop }}</a>',
+            label: '<b>{{ shop.price }}</b> {{ shop.get_currency_display }} <a href="{% url price_prodshop_detail product.id shop.shop_id %}">{{ shop.title }}</a>',
             color: 0,
             data: [{% for item in object_list %}{% ifequal item.shop.id shop.shop_id %}
             ["{{ item.last_time_update|date:'Y/m/d G:i:s' }}",{{ item.price|escapejs }}],
