--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,9 @@
 </div>
 <div id="sitemenu">
     <ul>
-    {% if user.is_authenticated %}<li><a href="/trades/">Мои покупки</a></li>{% endif %}
     <li><a href="/products/">Товары</a></li>
     <li><a href="/shops/">Магазины</a></li>
-    <li><a href="/blog/">Дневник</a></li>
+    <li><a href="/blog/">Блог</a></li>
     <li><a href="/about/">О проекте</a></li>
     </ul>
 </div>
