--- a/templates/fprice/price_list.html
+++ b/templates/fprice/price_list.html
@@ -17,14 +17,10 @@
 </div>
 {% endif %}
 
-<div id="trade-add">
-<p><a href="{% url price_trade_add %}">Добавьте вашу покупку прямо сейчас!</a></p>
-</div>
-
 <div id="price-entries">
     <table>
     {% for item in object_list %}
-        <tr><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><a title="{{ item.shop.title }}" href="{% url price_prodshop_detail item.product.id item.shop.id %}">{{ item.product }}</a></td></tr>
+        <tr><td><a href="{% url price_product_detail item.id %}">{{ item.title }}</a></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#price-entries -->
