--- a/templates/fprice/product_list.html
+++ b/templates/fprice/product_list.html
@@ -17,7 +17,7 @@
 </div>
 {% endif %}
 
-<div id="price-entries">
+<div id="product-entries">
     <table>
     {% for item in object_list %}
         <tr><td><a href="{% url price_product_detail item.id %}">{{ item.title }}</a></td></tr>
