add summary fields

--- a/templates/fprice/base_price.html
+++ b/templates/fprice/base_price.html
@@ -28,6 +28,7 @@
         <ul>
         <li><a href="{% url price_trade_add %}">Добавить покупку</a></li>
         <li><a href="{% url price_trade_list %}">Мои покупки</a></li>
+        <li><a href="{% url price_summary_list %}">Мои итоги</a></li>
         </ul>
     </li>
     {% endif %}
