--- a/templates/fprice/trade_add.html
+++ b/templates/fprice/trade_add.html
@@ -14,7 +14,7 @@ th { text-align: left; }
 </style>
 {% endblock %}
 
-{% block breadcrumbs %} - <a href="{% url price_summary_list %}">Профиль</a> - Новая покупка{% endblock %}
+{% block breadcrumbs %} - <a href="{% url price_summary_list %}">Мои отчеты</a> - Новая покупка{% endblock %}
 
 {% block contentclass %}price-add{% endblock %}
 {% block content %}
