--- a/templates/fprice/trade_list.html
+++ b/templates/fprice/trade_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}Мои покупки | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Покупки{% endblock %}
+{% block breadcrumbs %} - Мои покупки{% endblock %}
 
 {% block contentclass %}trade{% endblock %}
 
