--- a/templates/fprice/prodshop_detail.html
+++ b/templates/fprice/prodshop_detail.html
@@ -26,8 +26,8 @@ $(document).ready(function() {
             label: '<a href="{{ shop.get_absolute_url }}">{{ shop.title }}</a>',
             color: 0,
             data: [{% for item in object_list %}{% ifequal item.shop.id shop.id %}
-            ["{{ item.last_time_update|date:"Y/m/d G:i:s" }}",{{ item.price|escapejs }}],
-            ["{{ item.time|date:"Y/m/d G:i:s" }}",{{ item.price|escapejs }}],
+            ["{{ item.last_time_update|date:'Y/m/d G:i:s' }}",{{ item.price|escapejs }}],
+            ["{{ item.time|date:'Y/m/d G:i:s' }}",{{ item.price|escapejs }}],
             {% endifequal %}{% endfor %}]
         },
         {% endfor %}
