--- a/templates/fprice/trade_list.html
+++ b/templates/fprice/trade_list.html
@@ -16,7 +16,7 @@
 <div id="trade-entries">
     <table>
     {% for item in object_list %}
-        <tr><td><i>{{ item.time|date:"j b H:i" }}</i></td><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.cost }}</b></td><td>{{ item.price.get_currency_display }}</td><td><a title="{{ item.price.shop.title }}" href="{% url price_prodshop_detail item.price.product.id item.price.shop.id %}">{{ item.price.product }}</a></td></tr>
+        <tr><td><i>{{ item.time|date:"Y, j b H:i" }}</i></td><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.cost }}</b></td><td>{{ item.price.get_currency_display }}</td><td><a title="{{ item.price.shop.title }}" href="{% url price_prodshop_detail item.price.product.id item.price.shop.id %}">{{ item.price.product }}</a></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#trade-entries -->
