--- a/templates/fprice/prodshop_detail.html
+++ b/templates/fprice/prodshop_detail.html
@@ -130,9 +130,13 @@ $(document).ready(function() {
 <div id="shop-choices" style="width:400px;">Магазин:</div>
 <!-- #shop-choices -->
 
-<p><a href="{{ product.get_absolute_url }}">Цены на этот товар в других магазинах</a></p>
-
-</div>
+<div id="price-entries">
+    <table>
+    {% for item in object_list %}
+        <tr><td style="text-align: right; padding-right: 0px;"><b>{% if forloop.first %}<a class="price_up" href="{% url price_up item.id %}">+^</a> <big>{{ item.price }}</big>{% else %}{{ item.price }}{% endif %}</b></td><td>{{ item.get_currency_display }}</td><td><i>{{ item.last_time_update|date:"Y, j b H:i" }}</i></td></tr>
+    {% endfor %}
+    </table>
+</div><!-- /#price-entries -->
 
 <script type="text/javascript">
 $(document).ready(function(){
@@ -152,13 +156,9 @@ $(document).ready(function(){
 });
 </script>
 
-<div id="price-entries" style="width:220px; margin-left:30px; float:right;">
-    <table>
-    {% for item in object_list %}
-        <tr><td style="text-align: right; padding-right: 0px;"><b>{% if forloop.first %}<a class="price_up" href="{% url price_up item.id %}">+^</a> <big>{{ item.price }}</big>{% else %}{{ item.price }}{% endif %}</b></td><td>{{ item.get_currency_display }}</td><td><i>{{ item.last_time_update|date:"j b H:i" }}</i></td></tr>
-    {% endfor %}
-    </table>
-</div><!-- /#price-entries -->
+<p><a href="{{ product.get_absolute_url }}">Цены на этот товар в других магазинах</a></p>
+
+</div>
 
 {% if is_paginated %}<div class="pagination">Страницы:
     {% if has_previous %}<a class="page-previous" href="?page={{ previous }}">позже</a>{% endif %}
