--- a/templates/fprice/product_detail.html
+++ b/templates/fprice/product_detail.html
@@ -8,16 +8,14 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.flot.min.js"></script>
 {% endblock %}
 
-{% block breadcrumbs %} - <a href="{% url price_index %}">Цены</a> - Продукт{% endblock %}
+{% block breadcrumbs %}
+ - <a href="{% url price_product_list %}">Товары</a>{% for cate in categories %} - <a href="{{ cate.get_absolute_url }}">{{ cate }}</a>
+{% endfor %} - <a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a> - Продукт</a>
+{% endblock %}
 
 {% block contentclass %}price{% endblock %}
 
 {% block content %}
-<div id="categories">
-{% for cate in categories %}
-<a href="{{ cate.get_absolute_url }}">{{ cate }}</a>{% if not forloop.last %} - {% endif %}
-{% endfor %}</div>
-
 <h1>Цены на {{ product.title }}</h1>
 
 <div id="favorite-product"><p>{% if product|is_favorite:user %}[<a href="{% url_delete_from_favorites_confirmation 'favorites' product %}">удалить из избранного</a>]{% else %}[<a href="{% url_add_to_favorites product %}">добавить в избранное</a>]{% endif %}</p></div>
